[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10,<0.11" ]

[project]
name = "sma"
version = "0.0.2"
description = "SMA-EM"
readme = "README.md"
keywords = [ "energy", "power", "sma" ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [ { name = "Johann Kellerman", email = "kellerza@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "icecream",
  "mqtt-entity[options]>=1,<2",
]
urls.Homepage = "https://kellerza.github.io/sma-em/"

[dependency-groups]
dev = [
  "codespell",
  "pyproject-fmt",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "zuban>=0.6.1",
]

[tool.uv]
build-backend.module-name = [ "ha_addon_sma" ]

[tool.ruff]
target-version = "py313"
include = [ "src/**/*.py" ]
exclude = [ "sma-em-legacy/*", "src/ha_addon_sma/speedwiredecoder.py" ]
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "lf"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true
lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  "D",     # pydocstyle
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PTH",   # flake8-pathlib
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
lint.ignore = [ "D203", "D213", "E203", "E501", "PLR2004" ]
lint.pylint.max-args = 7

[tool.codespell]
skip = "data,*.map,package-lock.json,*.map"
ignore-words-list = "HASS,hass,Hass,ist"

[tool.pytest]
ini_options.pythonpath = [ ".", "src" ]
ini_options.filterwarnings = "ignore:.+@coroutine.+deprecated.+"
ini_options.testpaths = "src\tests"
ini_options.norecursedirs = [ ".git", "modules" ]
ini_options.log_cli = true
ini_options.log_cli_level = "DEBUG"
ini_options.asyncio_mode = "auto"
ini_options.addopts = "--cov=src --cov-report xml:cov.xml"
